category section complete

--- a/app/support.html
+++ b/app/support.html
@@ -2,6 +2,7 @@
 {% import "components/Header/_header.njk" as Header %}
 {% import "components/Breadcrumb/_breadcrumb.njk" as Breadcrumb %}
 {% import "pages/support/_search.njk" as SearchSection %}
+{% import "pages/support/_category.njk" as CategorySection %}
 {% import "components/Footer/_footer-03__v2.njk" as FooterSection %}
 {% block main %}
 <!-- Header Section Start -->
@@ -17,6 +18,9 @@
 <!-- Search Section Start -->
 {{SearchSection.render()}}
 <!-- Search Section End --> 
+<!-- Category Section Start -->
+{{CategorySection.render()}}
+<!-- Category Section End --> 
 <!-- Footer Section Start -->
 {{FooterSection.render()}}
 <!-- Footer Section End --> 
