about testimonial fix

--- a/app/about-us.html
+++ b/app/about-us.html
@@ -24,7 +24,7 @@
 {{FeatureSection.render()}}
 <!-- FeatureSection Section End -->
 <!-- Testimonial Section Start -->
-{{TestimonialSection.render()}}
+{{TestimonialSection.render({bgClassName:"testimonial-card-02__content--v2"})}}
 <!-- Testimonial Section End -->
 <!-- Footer Section Start -->
 {{FooterSection.render()}}
