--- a/app/error.html
+++ b/app/error.html
@@ -15,7 +15,7 @@
                             <h3 class="title">Oops, that page can’t be found.</h3>
                             <p class="text-dark">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry.</p>
                         </div>
-                        <a class="btn btn-primary" href="#">
+                        <a class="btn btn-primary" href="index.html">
                             Go Back to Hompage
                             <svg width="8" height="14" viewBox="0 0 8 14" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <path d="M1 13L7 7L1 1" stroke="" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
