commingsoon page complete

--- a/app/error.html
+++ b/app/error.html
@@ -1,5 +1,6 @@
 {% extends "template.njk" %}
 {% block main %}
+<!-- Error Area Start -->
     <div class="error-area">
         <div class="container">
             <div class="row align-items-center justify-content-center">
@@ -26,4 +27,5 @@
             </div>
         </div>
     </div>
+<!-- Error Area End -->
 {% endblock %}
