account page complete

--- a/app/commingsoon.html
+++ b/app/commingsoon.html
@@ -3,6 +3,7 @@
 {% block main %}
 <!-- Header Section Start -->
 {{Header.render(nonabsoluteHeader)}}
+<!-- Header Section End -->
 <!-- Comming Soon Area Start -->
     <div class="commingsoon-area">
         <div class="container">
