--- a/app/landing-6.html
+++ b/app/landing-6.html
@@ -33,18 +33,18 @@
   <!-- Screenshot Section Start -->
   {{ScreenshotSection.render()}}
   <!-- Screenshot Section End -->
-  <!-- Counter Section Two Start -->
+  <!-- Content Section Two Start -->
   {{ContentSectionTwo.render()}}
-  <!-- Counter Section Two End -->
-    <!-- Counter Section Three Start -->
+  <!-- Content Section Two End -->
+    <!-- Content Section Three Start -->
   {{ContentSectionThree.render()}}
-  <!-- Counter Section Three End -->
-    <!-- Cta Section Three Start -->
+  <!-- Content Section Three End -->
+    <!-- Cta Section  Start -->
   {{CtaSection.render()}}
-  <!-- Cta Section Three End -->
-  <!-- Testimonial Section Three Start -->
+  <!-- Cta Section  End -->
+  <!-- Testimonial Section  Start -->
   {{TestimonialSection.render()}}
-  <!-- Testimonial Section Three End -->
+  <!-- Testimonial Section  End -->
   <!-- Footer Section Start -->
   {{FooterSection.render()}}
   <!-- Footer Section End -->
