--- a/app/coming-soon.html
+++ b/app/coming-soon.html
@@ -5,23 +5,23 @@
 {{Header.render(nonabsoluteHeader)}}
 <!-- Header Section End -->
 <!-- Comming Soon Area Start -->
-    <div class="commingsoon-area">
+    <div class="comingsoon-area">
         <div class="container">
             <div class="row align-items-center justify-content-center"> 
                 <div class="col-xl-6 col-lg-6 col-md-8">
-                    <div class="commingsoon-area__image-group">
-                        <img src="./image/innerpage/commingsoon.svg" alt="commingsoon" class="w-100">
+                    <div class="comingsoon-area__image-group">
+                        <img src="./image/innerpage/comingsoon.svg" alt="comingsoon" class="w-100">
                     </div>
                 </div>
                 <div class="col-xl-5 col-lg-6 col-md-8 col-xs-10 offset-xl-1">
-                    <div class="commingsoon-area__content">
+                    <div class="comingsoon-area__content">
                         <div class="section-title-block text-center text-lg-start">
                             <h2 class="title mb-10">We Are Comming Soon</h2>
                             <p class="text-dark">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi in gravida sem enim sed. In at euismod tortor et tempor.
                             </p>
                         </div>
                         <div class="timer-block"  id="countdown"></div>
-                        <div class="commingsoon-area__content--newsletter">
+                        <div class="comingsoon-area__content--newsletter">
                             <div class="hero-newsletter-01">
                                 <form action="#">
                                     <div class="form-group">
