fix: protfolio filter menu active button

--- a/app/coming-soon.html
+++ b/app/coming-soon.html
@@ -16,7 +16,7 @@
                 <div class="col-xl-5 col-lg-6 col-md-8 col-xs-10 offset-xl-1">
                     <div class="comingsoon-area__content">
                         <div class="section-title-block text-center text-lg-start">
-                            <h2 class="title mb-10">We Are Comming Soon</h2>
+                            <h2 class="title mb-10">We Are Coming Soon</h2>
                             <p class="text-dark">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi in gravida sem enim sed. In at euismod tortor et tempor.
                             </p>
                         </div>
