add: counter section on preview page

--- a/app/index.html
+++ b/app/index.html
@@ -1,6 +1,7 @@
 {% extends "template.njk" %}
 {% import "components/Header/_header.njk" as Header %}
 {% import "pages/preview/_hero.njk" as HeroSection %}
+{% import "pages/preview/_counter.njk" as CounterSection %}
 {% import "pages/preview/_cta.njk" as CtaSection %}
 {% import "pages/landing-6/_testimonial.njk" as TestimonialSection %}
 {% block main %}
@@ -10,6 +11,9 @@
   <!-- Hero Section Start -->
   {{HeroSection.render()}} 
   <!-- Hero Section End -->
+  <!-- Counter Section Start -->
+  {{CounterSection.render()}}
+  <!-- Counter Section End -->
   <!-- Testimonial Section  Start -->
   {{TestimonialSection.render()}}
   <!-- Testimonial Section  End -->
