add: preview section on preview page

--- a/app/index.html
+++ b/app/index.html
@@ -2,6 +2,7 @@
 {% import "components/Header/_header.njk" as Header %}
 {% import "pages/preview/_hero.njk" as HeroSection %}
 {% import "pages/preview/_counter.njk" as CounterSection %}
+{% import "pages/preview/_preview.njk" as PreviewSection %}
 {% import "pages/preview/_cta.njk" as CtaSection %}
 {% import "pages/landing-6/_testimonial.njk" as TestimonialSection %}
 {% block main %}
@@ -14,6 +15,9 @@
   <!-- Counter Section Start -->
   {{CounterSection.render()}}
   <!-- Counter Section End -->
+  <!-- Preview Section Start -->
+  {{PreviewSection.render()}}
+  <!-- Preview Section End -->
   <!-- Testimonial Section  Start -->
   {{TestimonialSection.render()}}
   <!-- Testimonial Section  End -->
