--- a/app/career.html
+++ b/app/career.html
@@ -10,8 +10,8 @@
 <!-- Header Section End -->
 <!-- Breadcrumb Section Start -->
 {{Breadcrumb.render({
-    "pageName":"Careers",
-    "title":"Careers",
+    "pageName":"Career",
+    "title":"Career",
     "text":"Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam"
 })}}
 <!-- Breadcrumb Section End --> 
