--- a/app/career-details.html
+++ b/app/career-details.html
@@ -10,8 +10,8 @@
 <!-- Header Section End -->
 <!-- Breadcrumb Section Start -->
 {{Breadcrumb.render({
-    "pageName":"Careers Details",
-    "title":"Careers Details",
+    "pageName":"Career Details",
+    "title":"Career Details",
     "text":"Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam"
 })}}
 <!-- Breadcrumb Section End --> 
