fix: project mangement page accout link

--- a/app/project-management.html
+++ b/app/project-management.html
@@ -14,7 +14,19 @@
 {% import "components/Footer/_footer-03.njk" as FooterSection %}
 {% block main %}
   <!-- Header Section Start -->
-  {{Header.render(siteHeaderThree)}}
+  {{Header.render({
+    "additional_header_class":"site-header--menu-right logo-dark mobile-menu-trigger-dark",
+    "header_double_button":true,
+    "absolute_header":true,
+    "header_button":false,
+    "additional_db_classes":"site-header__btns--02",
+    "header_button_class_1":"btn btn-1 btn-primary w-140",
+    "header_button_class_2":"btn btn-2 btn-primary w-140",
+    "header_button_text_1" :"Sign In",
+    "header_button_text_2" :"Sign Up <img src='./image/svg/arrow.svg' class='make-it-inline' alt='arrow'>",
+    "link_one":"sign-in.html",
+    "link_two":"sign-up.html"
+  })}}
   <!-- Header Section End -->
   <!-- Hero Section Start -->
   {{HeroSection.render()}}
