--- a/app/contact.html
+++ b/app/contact.html
@@ -19,7 +19,7 @@
 <!-- Contact Content Area End --> 
 <!-- Map Area Start -->
     <div class="map-area">
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3651.227879477866!2d90.34898411538501!3d23.774898293755943!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3755c1e1938cc90b%3A0xbcfacb6b89117685!2sZakirsoft%20-%20Innovative%20Software%20%26%20Web%20Development%20Solutions!5e0!3m2!1sen!2sbd!4v1641634410288!5m2!1sen!2sbd" width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3651.227879477866!2d90.34898411538501!3d23.774898293755943!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3755c1e1938cc90b%3A0xbcfacb6b89117685!2sZakirsoft%20-%20Innovative%20Software%20%26%20Web%20Development%20Solutions!5e0!3m2!1sen!2sbd!4v1641634410288!5m2!1sen!2sbd" class="w-100 h-100" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
     </div>
 <!-- Map Area End -->
 <!-- Footer Section Start -->
